Resolve linetrs error and add style for index page

--- a/style.css
+++ b/style.css
@@ -13,3 +13,11 @@ body {
 h1 {
   color: black;
 }
+
+.row {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: midnightblue;
+  border-radius: 10px;
+}
+
